# MultiLanguageKDTree

./: .gitignore  README.md
.github/workflows/: rust.yml
CVersion/: .gitignore  Makefile
CVersion/src/: kdtree-sim.c  kdtree.c  kdtree.h  particle.c  particle.h  test.c
CppVersion/: .gitignore  Makefile  kdtree-sim  kdtree.cpp
GoVersion/: Makefile  kdtree-sim  kdtree.go  main.go  particle.go
HaskellVersion/: .gitignore  CHANGELOG.md  HaskellVersion.cabal
HaskellVersion/app/: Particle.hs
JSVersion/: index.ts  kdtree.ts  package-lock.json  package.json  particle.ts
JVMVersions/: build.sbt
Parallel/: README.md  run_benchmarks.sh
Parallel/CVersion/: Makefile  times.txt
Parallel/CppVersion/: Makefile  benchmark.sh  kdtree-sim.cpp  kdtree.cpp  particle.cpp  times.txt
Parallel/GoVersion/: go.mod  kdtree-sim  kdtree.go  kdtree_test.go  main.go  particle.go  times.txt
Parallel/JVMVersions/: .gitignore  benchmark.sh  build.sbt  times.txt
Parallel/JuliaVersion/: benchmark.sh  benchmark2.sh  kdtreeparallel.jl  kdtreeparallelB.jl  times.bak  times.txt
Parallel/RustVersion/: Cargo.toml  benchmark.sh  times.txt
Parallel/RustVersion/src/: array_kd_tree.rs  lib.rs  main.rs  quickstat.rs
PythonVersion/: mypy.ini
PythonVersion/src/: kd_tree.py  particle.py  test.py
RustVersion/: Cargo.toml
RustVersion/src/: array_kd_tree.rs  array_particle.rs  kd_tree.rs  main.rs  simd_particle.rs
Sequential/RustVersion/: .gitignore  Cargo.toml
Sequential/RustVersion/src/: array_kd_tree.rs  kd_tree.rs  kd_tree_box.rs  main.rs  simd_kd_tree.rs  simd_particle.rs
TreeVisualizer/: build.sbt
(+49 files in other folders)
