[package]
name = "rust_kdtree_nbody"
version = "0.1.0"
edition = "2021"
authors = ["Mark Lewis <mlewis@trinity.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To switch versions - rustup override set nightly

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
fastrand = "1.4"
rayon = "1.8.1"

[profile.benchmark]
inherits = "release"
lto = true
codegen-units = 1
