[package]
name = "rust_kdtree_nbody"
version = "0.1.0"
edition = "2021"
authors = ["Mark Lewis <mlewis@trinity.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# To switch versions - rustup override set nightly

[dependencies]
# clap = { version = "4.5.42", features = ["derive"] }

core_simd = { git = "https://github.com/rust-lang/portable-simd" }
fastrand = "1.4"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.benchmark]
inherits = "release"
lto = true
codegen-units = 1
